Fix osu! button being misaligned

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -12,11 +12,11 @@ section {
   padding: 40px 25px;
   margin-bottom: 30px;
 
-  #buttons {
+  .medium-3 {
     text-align: center;
 
-    li a {
-      width: 85%;
+    .button {
+      width: 100%;
     }
   }
   
